--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset='UTF-8'>
-<title>Racing Game Final</title>
-<style>
-body{margin:0;background:#111;}
-canvas{background:#222;display:block;margin:0 auto;}
-</style>
+    <meta charset="UTF-8">
+    <title>Racing Game</title>
+    <style>
+        body { margin:0; overflow:hidden; background:black; }
+        canvas { display:block; margin:auto; background:#222; }
+    </style>
 </head>
 <body>
-<canvas id='game' width='800' height='600'></canvas>
-<script src='script.js'></script>
+    <canvas id="game" width="500" height="700"></canvas>
+    <script src="script.js"></script>
 </body>
 </html>
