--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Racing Game</title>
     <style>
-        body { margin:0; overflow:hidden; background:black; }
-        canvas { display:block; margin:auto; background:#222; }
+        body { background: #111; margin: 0; overflow: hidden; }
+        canvas { background: #333; display: block; margin: auto; }
     </style>
 </head>
 <body>
-    <canvas id="game" width="500" height="700"></canvas>
+
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
+
     <script src="script.js"></script>
 </body>
 </html>
