--- a/index.html
+++ b/index.html
@@ -1,17 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <title>Racing Game</title>
-    <style>
-        body { background: #111; margin: 0; overflow: hidden; }
-        canvas { background: #333; display: block; margin: auto; }
-    </style>
+<meta charset="UTF-8">
+<title>Racing Game</title>
+<style>
+    body { margin:0; padding:0; background:#000; display:flex; justify-content:center; align-items:center; height:100vh; color:#fff; font-family:sans-serif; }
+    #gameCanvas { display:none; background:#333; }
+    #loadingScreen { text-align:center; }
+    #loadingScreen h1 { font-size:2em; margin-bottom:20px; }
+    #loadingScreen p { font-size:1.2em; color:#ff0; }
+</style>
 </head>
 <body>
 
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
+<div id="loadingScreen">
+    <h1>Racing Game</h1>
+    <p>Presiona ENTER para empezar</p>
+</div>
 
-    <script src="script.js"></script>
+<canvas id="gameCanvas" width="768" height="512"></canvas>
+
+<script>
+// ---------- PANTALLA DE CARGA ----------
+const loadingScreen = document.getElementById("loadingScreen");
+const canvas = document.getElementById("gameCanvas");
+const ctx = canvas.getContext("2d");
+
+let gameStarted = false;
+
+document.addEventListener("keydown", e => {
+    if(e.key === "Enter" && !gameStarted){
+        gameStarted = true;
+        loadingScreen.style.display = "none";
+        canvas.style.display = "block";
+        loop(); // iniciar el juego
+    }
+});
+
+// ---------- EJEMPLO DE JUEGO ----------
+const tileSize = 64;
+let player = {x:100, y:100, width:50, height:50};
+
+function updatePlayer(){
+    if(keys["ArrowUp"]) player.y -= 5;
+    if(keys["ArrowDown"]) player.y +=5;
+    if(keys["ArrowLeft"]) player.x -=5;
+    if(keys["ArrowRight"]) player.x +=5;
+}
+
+let keys = {};
+document.addEventListener("keydown", e=>keys[e.key]=true);
+document.addEventListener("keyup", e=>keys[e.key]=false);
+
+function drawPlayer(){
+    ctx.fillStyle = "red";
+    ctx.fillRect(player.x, player.y, player.width, player.height);
+}
+
+function loop(){
+    ctx.clearRect(0,0,canvas.width,canvas.height);
+    updatePlayer();
+    drawPlayer();
+    requestAnimationFrame(loop);
+}
+</script>
+
 </body>
 </html>
