--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     #loadingScreen { text-align:center; }
     #loadingScreen h1 { font-size:2em; margin-bottom:20px; }
     #loadingScreen p { font-size:1.2em; color:#ff0; }
+    #loadingScreen img { max-width: 400px; width: 80%; height:auto; margin-bottom:20px; border:3px solid #fff; }
 </style>
 </head>
 <body>
 
 <div id="loadingScreen">
+    <img src="portada.png.png" alt="Portada del juego">
     <h1>Racing Game</h1>
     <p>Presiona ENTER para empezar</p>
 </div>
